deploy/apps/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perf-dashboard
  namespace: perf-dashboard
  labels:
    name: perf-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      name: perf-dashboard
  template:
    metadata:
      labels:
        name: perf-dashboard
    spec:
      containers:
        - name: frontend
          image: quay.io/keithwhitley4/perf-dashboard:frontend
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:      
              cpu: "1.0"
              memory: 2Gi
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
        - name: backend
          image: quay.io/keithwhitley4/perf-dashboard:backend
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: "1.0"
              memory: 2Gi
          volumeMounts:
            - name: config 
              mountPath: /backend/ocpperf.toml
              subPath: ocpperf.toml
      volumes:
        - name: config
          configMap:
            name: dashboard-config
