deploy/apps/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perf-dashboard
  namespace: perf-dashboard
spec: 
  type: ClusterIP
  ports:
  - name: dashboard
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: api
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    name: perf-dashboard
